===============================================================================
Changelog:

11/13/2011
  - Move user configurable #defines to setup0.h from stedefs.h
  - Rename STN_NOTEBOOK_PAGES_DEFAULT_MAX to STN_NOTEBOOK_PAGES_ALLOWED


11/13/2009
  - Bump version to 1.2.6
  - Added branches/docview, branches/aui
  - Removed pre-2.8 compatibility

11/12/2009
  - Substantial i18n changes
  - Fix gcc+MinGW warnings
  - wx2.9 compatibility

1.2.5
  - Fix bug in GTK for not being able to click a button that you've just
    enabled without first capturing and releasing the mouse.
    This fixes multiple clicks on "Replace & Find Next".
  - Add Squirrel language. (Arne Steinarson)
  - Fix wxSTEditorOptions::HasConfigOption(). (Arne Steinarson)
  - Fix the editor going into selection mode when popping up file modified
    dialog. (Arne Steinarson)

06/29/2007
    Bump version to 1.2.5
    Fix some bugs with the wxNotebook not sending valid page change events.

11/07/2006
    Find/Replace dialog now remembers user set size when the find all window
        is shown.

10/26/2006
    Bump version to 1.2.4
    Fix builds using configure and document how to use it

8/22/2006
    Bump version to 1.2.3
    Fully use the treectrl in the frame for showing the loaded files and paths
    Update code to scintilla/scite 1.71

05/18/2006
    Bump version to 1.2.2
    Replace the wxListBox in the wxSTEditorFrame with a wxTreeCtrl
        Eventually it will sort the files by path

05/01/2006
    Fix non default style loading.

04/19/2006
    Added Find all strings to find/replace dialog
    Changed wxSTEditor::FindString to take an "int action" instead of
        "bool highlight" to allow for goto pos, select, or do nothing
    Fix the cursor jumping around for find all, replace all

04/16/2006
    Release 1.2.1
    Add autocompletion for any word in the document in addition to the keywords
    Fix compilation for DLL lib, wxSTC doesn't export Scintilla's SString class

04/13/2006